--- a/harbour-calcit.desktop
+++ b/harbour-calcit.desktop
@@ -9,7 +9,7 @@ Name=calcit
 #
 # Remember to comment out the following line, if you do not want to use
 # a different app name in German locale (de).
-Name[de]=calcit
+#Name[de]=calcit
 
 [X-Sailjail]
 # Replace with your organization as a reverse domain name
